# src/ZPI.API/Endpoints/Alerts/Get/GetAlertController.cs
@@ -5,6 +5,7 @@ using Newtonsoft.Json;
 using System;
 using System.Collections.Generic;
 using System.Net.Http;
+using System.Net.Mime;
 using System.Security.Claims;
 using System.Text;
 using System.Threading.Tasks;
@@ -16,7 +17,6 @@ namespace ZPI.API.Endpoints.Alerts.Get
 {
     [ApiController]
     [Route("api/alerts")]
-    [EnableCors("frontend_cors")]
     public class AlertController : ControllerBase
     {
         private static readonly HttpClient client = new();
@@ -31,19 +31,28 @@ namespace ZPI.API.Endpoints.Alerts.Get
             this.service = service;
         }
 
-        [HttpGet]
-        public async Task<Object> Get()
+
+        [HttpGet(Name = nameof(GetAllAllerts))]
+        [Produces(MediaTypeNames.Application.Json)]
+        [Consumes(MediaTypeNames.Application.Json)]
+        [ProducesDefaultResponseType]
+        [ProducesResponseType(typeof(IEnumerable<AlertDto>), StatusCodes.Status200OK)]
+        public async Task<IActionResult> GetAllAllerts()
         {
             var email = service.GetCurrentUserEmail();
             var respone = await client.GetStringAsync(apiUrl + "?email=" + email);
-            var model = JsonConvert.DeserializeObject<List<AlertWithActiveDto>>(respone);
-            return model;
+            return Ok(JsonConvert.DeserializeObject<List<AlertDto>>(respone));
         }
 
-        [HttpPost]
-        public async Task<Object> Post(AlertDto alert)
+        [HttpPost(Name = nameof(AddNewAllert))]
+        [Produces(MediaTypeNames.Application.Json)]
+        [Consumes(MediaTypeNames.Application.Json)]
+        [ProducesDefaultResponseType]
+        [ProducesResponseType(typeof(AlertDto), StatusCodes.Status200OK)]
+        public async Task<Object> AddNewAllert(AddAlertDto alert)
         {
-            if (alert.Currency == alert.OriginAssetName) {
+            if (alert.Currency == alert.OriginAssetName)
+            {
                 HttpContext.Response.StatusCode = 400;
                 return "Same target currency and origin asset name";
             }
@@ -63,15 +72,19 @@ namespace ZPI.API.Endpoints.Alerts.Get
             var response = await client.PostAsync(apiUrl, content);
             var contents = await response.Content.ReadAsStringAsync();
             int statusCode = (int)response.StatusCode;
-            var model = JsonConvert.DeserializeObject<AlertWithActiveDto>(contents);
+            var model = JsonConvert.DeserializeObject<AlertDto>(contents);
             HttpContext.Response.StatusCode = statusCode;
             if (statusCode == 200)
                 return model;
             return false;
         }
 
-        [HttpDelete("{id}")]
-        public async Task<Object> Delete(int id)
+        [HttpDelete("{id}", Name = nameof(DeleteAlert))]
+        [Produces(MediaTypeNames.Application.Json)]
+        [Consumes(MediaTypeNames.Application.Json)]
+        [ProducesDefaultResponseType]
+        [ProducesResponseType(typeof(bool), StatusCodes.Status200OK)]
+        public async Task<Object> DeleteAlert(int id)
         {
             var email = service.GetCurrentUserEmail();
             var response = await client.DeleteAsync(apiUrl + "?id=" + id + "&email=" + email);
